Fix stretched logo icon

--- a/src/assets/scss/structure/_sidebar.scss
+++ b/src/assets/scss/structure/_sidebar.scss
@@ -13,8 +13,10 @@
      padding: 0 calc($sidebar-width-sm * 0.5 - $logo-sm-height * 0.5);
  
      .logo-sm {
-         display: none;
-         height: $logo-sm-height;
+         display: inline-block;
+         width: 24px;
+         height: 24px;
+         object-fit: contain;
      }
 
      .logo-text {
